# trajectory_generator

./: CMakeLists.txt  package.xml
include/: ni_box.h  tf2_trajectory.h  traj_generator.h  trajectory_generator_ros_interface.h
include/trajectory_generator/: traj_generator-inl.h
msg/: bm_traj_point.msg  bm_traj_points.msg  trajectory_point.msg  trajectory_points.msg
src/: compare_matlab.m  near_identity.cpp  odeint_basic.cpp  odeint_custom_container.cpp  odeint_demo.cpp  odeint_observer.cpp  traj_generator.cpp  trajectory_generator_ros_interface.cpp
